<resources>
    <string name="app_name">CloudTest</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="test_toast_text">Login activity finished</string>
    <string name="unregistred_label">Unregistred</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_task_list">TaskListActivity</string>
</resources>
