<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appmon.cloudtest.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textAlignment="center" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newUserForm">
        <Button
            android:text="@string/action_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/registerButton"
            android:onClick="registerBtnClick"/>
        <Button
            android:text="@string/action_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/loginButton"
            android:onClick="loginBtnCick"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoutForm">
        <TextView
            android:text="@string/unregistred_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameText"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <Button
            android:text="@string/action_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:onClick="logoutBtnClick"/>

        <Button
            android:text="Tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskActivityBtn" />
    </LinearLayout>

</LinearLayout>
